style.css
body{
    height: 100vh;
    width: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    background-color: darkred;
}

#game-board {
    background-color: #CCC;
    width: 95vmin;
    height: 95vmin;
    display: grid;
    grid-template-rows: repeat(21, 1fr);
    grid-template-columns: repeat(21, 1fr);
}

.snake {
    background-color: hsl(200, 100%, 50%);
    border: .25vmin solid black
}

.food {
    background-color: hsl(50, 100%, 50%);
    border: .25vmin solid black
}

